test-suite/samples/typeckr/fail/call-expression/missing_args.slt
local callback = function(value: string)
end
callback()